feat: Add MyControllerFragment

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,7 +10,7 @@
     	<item>Apps</item>
     	<item>TV</item>
     	<item>System</item>
-        <item>MiniGame</item>
+        <item>리모컨</item>
     </string-array>
 
     <string-array name="tab_icons">
@@ -20,7 +20,7 @@
         <item>@drawable/icon_17114</item>
         <item>@drawable/icon_15111</item>
         <item>@drawable/icon_17183</item>
-        <item>@drawable/icon_17183</item>
+        <item>@drawable/ic_launcher</item>
     </string-array>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
